--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -170,7 +170,7 @@
             <div class="row">
                 <div id="contact" class="col-lg-10 col-lg-offset-1 text-center">
                     <h4>
-                        <strong>Role Base Access</strong>
+                        <strong>Car Sharing</strong>
                     </h4>
                         <p>25, rue Docteur Rémy Annino
                         <br />Saint-Etienne, 42000</p>
@@ -195,7 +195,7 @@
             </div>
         
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>Authors : Kevin Abrial, Amine IDIR & Alexis BARTHELEMY - Role Base Access 2017-2018 </p>
+        <p>Authors : Kevin Abrial, Amine IDIR & Alexis BARTHELEMY - Car Sharing 2017-2018 </p>
         
       </footer>
 
