--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,10 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
           	<li class="nav-item">
-              <a class="nav-link" th:href="@{/create}">Create</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/search}">Search</a>
+              <a class="nav-link" th:href="@{/excursions}">Excursions</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" th:href="@{/#ToMiddle}">Description</a>
@@ -60,31 +57,20 @@
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="first-slide"  >
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Search a trip</h1>
-                <p>Click to search a trip</p>
-                <p><a class="btn btn-lg btn-primary" href="/search" role="button">Search</a></p>
+                <h1>Excursions</h1>
+                <p>Click to see excursion</p>
+                <p><a class="btn btn-lg btn-primary" href="/excursions" role="button">Excursions</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="second-slide" >
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Create a trip</h1>
-                <p>Click to create a trip</p>
-                <p><a class="btn btn-lg btn-primary" href="/create" role="button">Create</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" >
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>If you need help ?</h1> 
