--- a/src/main/resources/templates/yourProfil.html
+++ b/src/main/resources/templates/yourProfil.html
@@ -56,6 +56,7 @@
 				<th>Username</th>
 				<th>Role User</th>
 				<th>Update</th>
+				<th>Children</th>
 
 			</tr>
 		</thead>
@@ -65,6 +66,7 @@
 				<td th:text="${userCurrent.username}"></td>
 				<td th:text="${userCurrent.userrole}"></td>
 				<td><a type="button" class="btn btn-success" th:href="@{/profilModify}">Update</a></td>
+				<td><a type="button" class="btn btn-success" th:href="@{/children}">Children</a></td>
 			</tr>
 		</tbody>
 	</table>
