--- a/src/main/resources/templates/createExcursion.html
+++ b/src/main/resources/templates/createExcursion.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Excursion</title>
+	<title>Create Excursion</title>
 
     <link rel="icon" href="../../../../favicon.ico">
 
@@ -34,26 +34,27 @@
       </nav>
     </header>
     <div class="container marketing">
-    <table id="search" class="table table-hover">
-	
-		<thead>
+		<form autocomplete="off" action="#" th:action="@{/excursions/createExcursions}"
+				 method="post" class="form-horizontal"
+					role="form">
+			<h3 class="form-signin-heading" th:text="Excursion"></h3>
+			<br/>
+			 
+			 				<input type="number" th:field="*{days}"
+								placeholder="Days..." class="form-control" required="required" step="1"/> 
+										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('days')}" th:errors="*{days}"
+								class="validation-message"></label> <br/> 
+								<input type="text" th:field="*{name}"
+								placeholder="Name..." class="form-control" required="required" maxlength="32"/> 
+										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+								class="validation-message"></label> <br/> 
+				<br />
+			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Create Excursion</button>
+			<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
+		</form>
 		
-			<tr>
-				<th>Name</th>
-				<th></th>
-
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="excursion : ${listExcursion}" id="tabCount" th:inline="text">
-				<td th:text="${excursion.name}"></td>
-				<td><a type="button" class="btn btn-success" th:href="@{'/trips/' + ${excursion.id}}">Voir Trajet</a></td>
-			</tr>
-		</tbody>
-	</table>
-		 <a type="button" class="btn btn-success" th:href="@{/excursions/createExcursions}">Create Excursion</a>       
 	</div>
-		
+					
 
 </body>
 </html>
