--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<title>Trip</title>
+
+    <link rel="icon" href="../../../../favicon.ico">
+
+     <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.0/examples/carousel/carousel.css" rel="stylesheet">
 </head>
+
 <body>
+	<header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" th:href="@{/index}">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/index#ToMiddle}">Description</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/index#ToBottom}">Help</a>
+            </li>
+            </ul>
+        </div>
+      </nav>
+    </header>
+    <div class="container marketing">
+    <table id="search" class="table table-hover">
+	
+		<thead>
+		
+			<tr>
+				<th>Date</th>
+				<th>Places</th>
+				<th>Reserver</th>
+				<th>Supprimer</th>
+
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="trip : ${listTrip}" id="tabCount" th:inline="text">
+				<td th:text="${trip.dateDepart}"></td>
+				<td th:text="${trip.numberPlaces}"></td>
+				<td><a type="button" class="btn btn-success" th:href="@{'/reserve/' + ${trip.id}}">Réserver</a></td>
+				<td><a type="button" class="btn btn-success" th:href="@{'/delete/' + ${trip.id}}">Supprimer</a></td>
+			</tr>
+		</tbody>
+	</table>
+		 <a type="button" class="btn btn-success" th:href="@{/trips/createTrips}">Create Trip</a>       
+	</div>
+		
 
 </body>
 </html>
