--- a/src/main/resources/templates/createExcursion.html
+++ b/src/main/resources/templates/createExcursion.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" th:href="@{/index}">Home</a>
+        <a class="navbar-brand" th:href="@{/}">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,19 +35,23 @@
     </header>
     <div class="container marketing">
 		<form autocomplete="off" action="#" th:action="@{/excursions/createExcursions}"
-				 method="post" class="form-horizontal"
+				 th:object="${theExcursion}" method="post" class="form-horizontal"
 					role="form">
 			<h3 class="form-signin-heading" th:text="Excursion"></h3>
 			<br/>
 			 
 			 				<input type="number" th:field="*{days}"
 								placeholder="Days..." class="form-control" required="required" step="1"/> 
-										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('days')}" th:errors="*{days}"
-								class="validation-message"></label> <br/> 
+							   <br/> 
 								<input type="text" th:field="*{name}"
 								placeholder="Name..." class="form-control" required="required" maxlength="32"/> 
-										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-								class="validation-message"></label> <br/> 
+									<br/> 
+									<select name="cars" multiple>
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="opel">Opel</option>
+  <option value="audi">Audi</option>
+</select>
 				<br />
 			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Create Excursion</button>
 			<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
