--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" th:href="@{/index}">Home</a>
+        <a class="navbar-brand" th:href="@{/}">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
 			</tr>
 		</tbody>
 	</table>
-		 <a type="button" class="btn btn-success" th:href="@{/trips/createTrips}">Create Trip</a>       
+		 <a type="button" class="btn btn-success" th:href="@{'/trips/createTrips/' + ${id}}">Create Trip</a>       
 	</div>
 		
 
