--- a/src/main/resources/templates/createChild.html
+++ b/src/main/resources/templates/createChild.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <title>Create Child</title>
@@ -8,52 +7,42 @@
 <link rel="icon" href="../../../../favicon.ico">
 
 <!-- Bootstrap core CSS -->
-<link href="https://getbootstrap.com/dist/css/bootstrap.min.css"
-	rel="stylesheet">
+<link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link
-	href="https://getbootstrap.com/docs/4.0/examples/carousel/carousel.css"
-	rel="stylesheet">
+<link href="https://getbootstrap.com/docs/4.0/examples/carousel/carousel.css" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-			<a class="navbar-brand" th:href="@{/index}">Home</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarCollapse" aria-controls="navbarCollapse"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link"
-						th:href="@{/index#ToMiddle}">Description</a></li>
-					<li class="nav-item"><a class="nav-link"
-						th:href="@{/index#ToBottom}">Help</a></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-	<div class="container marketing">
-		<form autocomplete="off" action="#"
-			th:action="@{/children/createChild}" method="post"
-			class="form-horizontal" role="form">
-			<h3 class="form-signin-heading" th:text="Child"></h3>
-			<br /> <input type="text" th:field="*{name}" placeholder="Name..."
-				class="form-control" required="required" step="1" /> <br /> <SELECT
-				th:field="*{idGroup}" name="gr">
-				<OPTION th:each="group : ${groups}" th:value="${group.id}"
-					th:inline="text">[[${group.name}]]</OPTION>
-			</SELECT> <br /> <br />
-			<button class="btn btn-lg btn-primary btn-block" name="Submit"
-				type="Submit">Create Child</button>
-			<span style="font-size: 20; color: #9FE855;"
-				th:utext="${successMessage}"></span>
-		</form>
+				<header>
+								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+												<a class="navbar-brand" th:href="@{/}">Home</a>
+												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+																<span class="navbar-toggler-icon"></span>
+												</button>
+												<div class="collapse navbar-collapse" id="navbarCollapse">
+																<ul class="navbar-nav mr-auto">
+																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+																</ul>
+												</div>
+								</nav>
+				</header>
+				<div class="container marketing">
+								<form autocomplete="off" action="#" th:object="${child}" th:action="@{/children/createChild}" method="post"
+												class="form-horizontal" role="form">
+												<h3 class="form-signin-heading" th:text="Child"></h3>
+												<input type="hidden" th:field="*{groupName}" /> <br /> <input type="text" th:field="*{name}"
+																placeholder="Name..." class="form-control" required="required" step="1" /> <br /> <SELECT
+																th:field="*{idGroup}" name="gr">
+																<OPTION th:each="group : ${groups}" th:value="${group.id}" th:inline="text">[[${group.name}]]</OPTION>
+												</SELECT> <br /> <br />
+												<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Create Child</button>
+												<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
+								</form>
 
-	</div>
+				</div>
 
 
 </body>
