--- a/src/main/resources/templates/excursion.html
+++ b/src/main/resources/templates/excursion.html
@@ -53,7 +53,11 @@
 																</tr>
 												</tbody>
 								</table>
-								<a type="button" class="btn btn-success" th:href="@{/excursions/createExcursions}">Create Excursion</a>
+								<p th:if="${userRole} == 'ADMIN'" align="center">
+												<a type="button" class="btn btn-success" th:href="@{/excursions/createExcursions}">Create Excursion</a>
+								</p>
+
+
 				</div>
 
 
