--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -11,6 +11,9 @@
 
 <!-- Custom styles for this template -->
 <link href="https://getbootstrap.com/docs/4.0/examples/carousel/carousel.css" rel="stylesheet">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -38,17 +41,18 @@
 																th:text="${placesReserved}"></span>
 												</label> <br /> <label> Nombres de places disponibles : <span class="label label-default"
 																th:text="${numberPlacesDispo}"></span>
-												</label> <br /> <label>Presence parent : <select th:field="*{presenceParent}" required="required">
+																<input id="numberPlacesDispo" type="hidden" th:value="${numberPlacesDispo}"/>
+												</label> <br /> <label>Presence parent : <select id="presenceParent"  th:field="*{presenceParent}" required="required" onchange="changeSelect();">
 																<option value="" selected="selected"></option>
 																<option value="1">Oui</option>
 																<option value="0">Non</option>
 												</select> </label> <br />
 												
-												Choissisez vos enfants qui participent à ce trajet:<SELECT multiple required
-																th:field="*{childs}" name="gr">
+												Choissisez vos enfants qui participent à ce trajet:<SELECT multiple required onchange="changeSelect();"
+																id="childs"  th:field="*{childs}" name="gr">
 																<OPTION th:each="child : ${childs}" th:value="${child.id}" th:inline="text">[[${child.name}]]</OPTION>
 												</SELECT><br /> <br />
-												<button class="btn btn-lg btn-success btn-block" name="Submit" type="Submit">Reserved</button>
+												<button id="boutton" class="btn btn-lg btn-success btn-block" name="Submit" type="Submit">Reserved</button>
 												<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
 								</form>
 
@@ -56,4 +60,22 @@
 
 
 </body>
+
+<script type="text/javascript">
+
+function changeSelect() {
+    var number = $("#numberPlacesDispo").val();
+    var parent = $("#presenceParent").val();
+    var child = $("#childs").val();
+    var childLength = child.length;
+    if (parseInt(parent) + childLength <= number) {
+    	$("#boutton").attr("disabled", false);
+    } else {
+        $("#boutton").attr("disabled", true); 
+    }
+}
+
+
+</script>
+
 </html>
