--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -29,6 +29,9 @@
               <a class="nav-link" th:href="@{/excursions}">Excursions</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" th:href="@{/annulerReservation}">Annuler Reservation</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" th:href="@{/#ToMiddle}">Description</a>
             </li>
             <li class="nav-item">
