--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -28,6 +28,9 @@
           	<li class="nav-item">
               <a class="nav-link" th:href="@{/excursions}">Excursions</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" th:href="@{/annulerReservation}">Annuler Reservation</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" th:href="@{/#ToMiddle}">Description</a>
             </li>
