--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -41,9 +41,9 @@
 		<form autocomplete="off" action="#" th:action="@{/delete}"
 					th:object="${theUser}" method="post" class="form-horizontal"
 					role="form">
-			<h3 class="form-signin-heading">Delete Account</h3>
+                        <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Delete your Account?</h1>
 			<br/>
-			<button class="btn btn-lg btn-danger btn-block" name="Submit" type="Submit" onclick="return confirm('Are you sure you want to delete your account ?');"> Delete Account</button>
+			<button class="btn btn-lg btn-danger btn-block" name="Submit" type="Submit" onclick="return confirm('Are you sure to delete your account?');" style="max-width: 250px; margin: auto;"> Yes, I want to unsubscribe</button>
 		</form>
 	</div>
 					
