--- a/src/main/resources/templates/yourProfil.html
+++ b/src/main/resources/templates/yourProfil.html
@@ -47,17 +47,16 @@
     </header>
 
 	<br/>
-	<table id="search" class="table table-hover">
-	
+        <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Your Profile</h1>
+        <div class="table-responsive">
+        <table id="search" class="table table-hover table-striped table-sm">
 		<thead>
-		
 			<tr>
-				<th>Identifier User</th>
-				<th>Username</th>
-				<th>Role User</th>
-				<th>Update</th>
-				<th>Children</th>
-
+                            <th>Identifier User</th>
+                            <th>Username</th>
+                            <th>Role User</th>
+                            <th>Update</th>
+                            <th>Children</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -70,6 +69,7 @@
 			</tr>
 		</tbody>
 	</table>
+        </div>
 
 
 </body>
