--- a/src/main/resources/templates/children.html
+++ b/src/main/resources/templates/children.html
@@ -14,45 +14,45 @@
 </head>
 
 <body>
-				<header>
-								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-												<a class="navbar-brand" th:href="@{/}">Home</a>
-												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-																<span class="navbar-toggler-icon"></span>
-												</button>
-												<div class="collapse navbar-collapse" id="navbarCollapse">
-																<ul class="navbar-nav mr-auto">
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
-																</ul>
-												</div>
-								</nav>
-				</header>
-				<div class="container marketing">
-								<table id="search" class="table table-hover">
-
-												<thead>
-
-																<tr>
-																				<th>Name</th>
-																				<th>Groups</th>
-																				<th></th>
-
-																</tr>
-												</thead>
-												<tbody>
-																<tr th:each="child : ${children}" id="tabCount" th:inline="text">
-																				<td th:text="${child.name}"></td>
-																				<td th:text="${child.groupName}"></td>
-																				<td><a type="button" class="btn btn-danger"
-																								th:href="@{'/children/deleteChild/' + ${child.id}}">Delete</a></td>
-																</tr>
-												</tbody>
-								</table>
-								<a type="button" class="btn btn-success" th:href="@{/children/createChild}">Create Child</a>
-				</div>
-
-
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" th:href="@{/}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container marketing">
+        <h1  style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Your Children</h1>
+        <div class="table-responsive">
+            <table id="search" class="table table-hover table-striped table-sm">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Groups</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="child : ${children}" id="tabCount" th:inline="text">
+                    <td th:text="${child.name}"></td>
+                    <td th:text="${child.groupName}"></td>
+                    <td><a type="button" class="btn btn-danger"
+                                                    th:href="@{'/children/deleteChild/' + ${child.id}}">Delete</a></td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+        <p align="center">
+            <a type="button" class="btn btn-success" style="max-width: 250px; margin: auto;" th:href="@{/children/createChild}">Create Child</a>
+        </p>
+    </div>
 </body>
 </html>
