--- a/src/main/resources/templates/createChild.html
+++ b/src/main/resources/templates/createChild.html
@@ -14,36 +14,37 @@
 </head>
 
 <body>
-				<header>
-								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-												<a class="navbar-brand" th:href="@{/}">Home</a>
-												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-																<span class="navbar-toggler-icon"></span>
-												</button>
-												<div class="collapse navbar-collapse" id="navbarCollapse">
-																<ul class="navbar-nav mr-auto">
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
-																</ul>
-												</div>
-								</nav>
-				</header>
-				<div class="container marketing">
-								<form autocomplete="off" action="#" th:object="${child}" th:action="@{/children/createChild}" method="post"
-												class="form-horizontal" role="form">
-												<h3 class="form-signin-heading" th:text="Child"></h3>
-												<input type="hidden" th:field="*{groupName}" /> <br /> <input type="text" th:field="*{name}"
-																placeholder="Name..." class="form-control" required="required" step="1" /> <br /> <SELECT
-																th:field="*{idGroup}" name="gr">
-																<OPTION th:each="group : ${groups}" th:value="${group.id}" th:inline="text">[[${group.name}]]</OPTION>
-												</SELECT> <br /> <br />
-												<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Create Child</button>
-												<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
-								</form>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" th:href="@{/}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container marketing">
 
-				</div>
+        <form autocomplete="off" action="#" th:object="${child}" th:action="@{/children/createChild}" method="post"
+        class="form-horizontal" role="form">
+            <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Create Child</h1>
+            <input type="hidden" th:field="*{groupName}" style="max-width: 500px; margin: auto;"/> <br />
+            <input type="text" th:field="*{name}"
+            placeholder="Name..." class="form-control" required="required" step="1" style="max-width: 500px; margin: auto;"/> <br />
+                <SELECT class="form-control" 
+                th:field="*{idGroup}" name="gr">
+                <OPTION th:each="group : ${groups}" th:value="${group.id}" style="max-width: 500px; margin: auto;" th:inline="text">[[${group.name}]] </OPTION>
+                </SELECT> <br /> <br />
+            <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit" style="max-width: 250px; margin: auto;">Validate Creation</button>
+            <span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
+        </form>
 
-
+    </div>
 </body>
 </html>
