--- a/src/main/resources/templates/profilModify.html
+++ b/src/main/resources/templates/profilModify.html
@@ -41,20 +41,20 @@
 		<form autocomplete="off" action="#" th:action="@{/profilModify}"
 					th:object="${theUser}" method="post" class="form-horizontal"
 					role="form">
-			<h3 class="form-signin-heading" th:text="ModifyPassword"></h3>
+                        <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Modify your Password</h1>
 			<br/>
 							 
 			<input type="password" th:field="*{password}"
-  								placeholder="Password..." class="form-control" required="required" /> 
+  								placeholder="Password..." class="form-control" required="required" style="max-width: 500px; margin: auto;"/> 
   								<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
 							class="validation-message" ></label> 
 				<br />
 				<input type="password" th:field="*{passwordConfirm}"
- 								placeholder="Confirm your password..." class="form-control" required="required" />
+ 								placeholder="Confirm your password..." class="form-control" required="required" style="max-width: 500px; margin: auto;" />
 			<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}"
 							class="validation-message" ></label> 
 				<br />
-			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Modify your password</button>
+			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit" style="max-width: 250px; margin: auto;">Modify your password</button>
 			<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
 		</form>
 	</div>
