--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -118,7 +118,7 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Add your children to a car, or be the driver <span class="text-muted">Collaborativity is the key of traveling.</span></h2>
+            <h2 class="featurette-heading">Add your children to a car, or be the driver <span class="text-muted">Collaboration is the key of traveling.</span></h2>
             <p class="lead">Once an excursion have been created, you'll be able to add your children for the trip, or decide to share your car</p>
           </div>
           <div class="col-md-5 order-md-1">
